--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "0.110.1"
+fastapi = { extras = ["all"], version = "0.110.1" }
 uvicorn = { extras = ["standard"], version = "^0.29.0" }
 oauth2client = "^4.1.3"
 google-cloud-texttospeech = "^2.24.0"
@@ -19,6 +19,7 @@ fal-client = "^0.5.7"
 pillow = "^11.1.0"
 pydantic-ai = "^0.0.20"
 dataclouder-conversation-ai-cards = "^0.0.5"
+dataclouder-tts = "^0.0.6"
 pymongo = "^4.10.1"
 
 
