--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,11 @@ google-generativeai = "^0.8.4"
 python-dotenv = "^1.0.1"
 fal-client = "^0.5.7"
 pillow = "^11.1.0"
-pydantic-ai = "^0.0.20"
-dataclouder-conversation-ai-cards = "^0.0.9"
+pydantic-ai = "^0.0.24"
 dataclouder-tts = "^0.0.6"
 pymongo = "^4.10.1"
 dataclouder-core = "^0.0.4"
+dataclouder-agent-cards = "^0.0.12"
 
 
 [build-system]
