--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ package-mode = false
 
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
 fastapi = { extras = ["all"], version = "0.110.1" }
 uvicorn = { extras = ["standard"], version = "^0.29.0" }
 oauth2client = "^4.1.3"
@@ -23,6 +23,19 @@ pymongo = "^4.10.1"
 dataclouder-core = "^0.0.4"
 dataclouder-agent-cards = "^0.0.12"
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.9.6"
+
+[tool.ruff]
+line-length = 180
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "C",  # flake8-comprehensions
+    "B",  # flake8-bugbear
+]
 
 [build-system]
 requires = ["poetry-core"]
