--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ ruff = "^0.9.6"
 
 [tool.ruff]
 line-length = 180
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
