--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,16 +16,21 @@ google-cloud-texttospeech = "^2.24.0"
 google-generativeai = "^0.8.4"
 python-dotenv = "^1.0.1"
 fal-client = "^0.5.7"
-pillow = "^11.1.0"
+pillow = "^10.4.0"
 pydantic-ai = "^0.0.24"
 dataclouder-tts = "^0.0.6"
 pymongo = "^4.10.1"
 dataclouder-core = "^0.0.5"
 dataclouder-agent-cards = "^0.0.12"
 dataclouder-conversation-ai-cards = "^0.0.9"
+moviepy = "^2.1.2"
+opencv-python = "^4.11.0.86"                                #for video extraction
+groq = "^0.18.0"
+yt-dlp = "^2025.2.19"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.9.6"
+ipykernel = "^6.29.5"
 
 [tool.ruff]
 line-length = 180
