--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,13 +11,19 @@
     "activityBarTop.inactiveForeground": "#44ff00",
     "activityBarTop.dropBorder": "#44ff00",
     "tab.activeBorderTop": "#44ff00",
+    
+    "panel.border": "#44ff00",
     "tab.border": "#44ff00",
     "editorGroupHeader.border": "#44ff00",
     "scrollbarSlider.background": "#44ff0040",
     "scrollbarSlider.activeBackground": "#44ff00cc",
-    "scrollbar.shadow": "#44ff006e"
+    "scrollbar.shadow": "#44ff006e",
+
   },
-  "ruff.enable": true,
+  
+  "editor.scrollbar.verticalScrollbarSize": 7,
+  "editor.scrollbar.horizontalScrollbarSize": 7,
+  
   "ruff.organizeImports": true,
   "ruff.fixAll": true,
   "editor.codeActionsOnSave": {
