--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ moviepy = "^2.1.2"
 opencv-python = "^4.11.0.86"                                #for video extraction
 groq = "^0.18.0"
 yt-dlp = "^2025.2.19"
+pandas = "^2.2.3"
+seaborn = "^0.13.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.9.6"
