--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,12 +12,11 @@
     "activityBarTop.dropBorder": "#44ff00",
     "tab.activeBorderTop": "#44ff00",
     "tab.border": "#44ff00",
+    "panel.border": "#44ff00",
     "editorGroupHeader.border": "#44ff00",
     "scrollbarSlider.background": "#44ff0040",
     "scrollbarSlider.activeBackground": "#44ff00cc",
-    "scrollbar.shadow": "#44ff006e",
-    "panel.border": "#44ff00",
-
+    "scrollbar.shadow": "#44ff006e"
   },
   
   "editor.scrollbar.verticalScrollbarSize": 7,
