--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ pandas = "^2.2.3"
 seaborn = "^0.13.2"
 google-cloud-storage = "^3.1.0"
 dataclouder-mongo = "^0.0.6"
+demucs = "^4.0.1"
+pydub = "^0.25.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.9.6"
