--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ pillow==10.3.0      # to help image manipulation
 pydantic-ai==0.0.19
 dataclouder-conversation-ai-cards==0.0.4
 dataclouder-mongo==0.0.3  # MongoDB utilities
+pydub==0.25.1       # For audio conversion (WAV to MP3)
