Add merge-upstream command and update project documentation and configuration

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 ENV=QA
 VERSION=0.0.1
 GEMINI_API_KEY=XXXX # Remove if you don't use
-FAL_KEY=XXXX # Remove if you don't use
-# GOOGLE_APPLICATION_CREDENTIALS=./.cred/key.json
 
+GOOGLE_APPLICATION_CREDENTIALS=./.cred/key.json
 
+MONGO_USER=XXXXXXXX
+MONGO_PASS=XXXXXXXX
+MONGO_HOST=XXXXXXXX
+MONGO_DB=XXXXXXXX
